--- a/rake_file-lists/Rakefile
+++ b/rake_file-lists/Rakefile
@@ -1,6 +1,19 @@
-require 'rake'
-files = Rake::FileList["**/*.md", "**/*.markdown"]
-files.exclude("~*")
-files.exclude(/^scratch\//)
-files # => ["ch1.md", "ch2.md", "ch3.md", "scratch/test.md", "subdir/appendix.md", "temp.md", "~ch1.md", "ch4.markdown"]
+source_files = Rake::FileList.new("**/*.md", "**/*.markdown") do |fl|
+  fl.exclude("~*")
+  fl.exclude(/^scratch\//)
+  fl.exclude do |f|
+    `git ls-files #{f}`.empty?
+  end
+end
 
+task :default => :html
+task :html => source_files.ext(".html")
+
+rule ".html" => ".md" do |t|
+  sh "pandoc -o #{t.name} #{t.source}"
+end
+
+# see future episodes for avoiding rule duplication like this
+rule ".html" => ".markdown" do |t|
+  sh "pandoc -o #{t.name} #{t.source}"
+end
